2007-08-21  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/module_list.c (module_kill):
	(executeModuleDesperate):
	(module_list_itr_init):
	re-indented

	* fvwm/events.c (My_XNextEvent):
	* fvwm/module_list.c (module_alloc):
	(do_execute_module):
	* fvwm/module_list.h (fmodule):
	(MOD_IS_CMDLINE):
	(MOD_SET_CMDLINE):
	restored *not* useless is_cmdline_module stuff

	* fvwm/functions.h:
	add constants for command group tagging

2007-08-19  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* configure.ac:
	don't check for tbl

2007-08-17  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* configure.ac:
	check for sed, perl and tbl, needed to build documentation

2007-08-16  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/System.c (fvwm_mkstemp):
	use constants from libs/fvwm_sys_stat.h

2007-08-15  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_list.c (do_execute_module):
	fixed possible crash when fork fails

	* fvwm/module_list.c (module_list_remove):
	now returns the removed fmodule*, or NULL if unsuccessful
	removed error message when removing a not listed module (it's normal)

	* fvwm/module_list.c (module_kill):
	module is inserted in death_row only if it is successfuly removed from
	module_list (fixes crash when module is killed more than once)

2007-08-08  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/events.c (My_XNextEvent):
	fixed hang with startup modules

2007-08-07  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/conditional.c (FreeConditionMask):
	fixed crash with inverted name condition

	* NEWS:
	fixed typo

2007-08-07  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* configure.ac:
	* README:
	* NEWS:
	* INSTALL.fvwm:
	* sample.fvwmrc/system.fvwm2rc-sample-95:
	* sample.fvwmrc/system.fvwm2rc:
	* sample.fvwmrc/system.fvwm2rc-sample-2:
	* libs/Picture.c (PicturePrintImageCache):
	* libs/Module.c:
	* libs/FGettext.c (FGettextPrintLocalePath):
	* libs/fvwmsignal.c:
	* libs/Module.h: